implemented base  API functionality
