# API/src/shared/Models.ts
@@ -1,0 +1,19 @@
+import { CreateCharacterRequest } from "./Types";
+
+export interface Character extends CreateCharacterRequest {
+  id: string,
+  hp: number,
+  maxHp: number,
+  tempHp: number
+}
+
+export interface CharacterHp {
+  id: string,
+  hp: number,
+  maxHp: number,
+  tempHp: number
+}
+
+export interface ApiResponse {
+  message: string
+}
